--- a/Papers/2023.12_OpenVoice.md
+++ b/Papers/2023.12_OpenVoice.md
@@ -1,7 +1,7 @@
 ---
 PDF: 
 标题: 
-作者:
+作者: Zengyi Qin, Wenliang Zhao, Xumin Yu, Xin Sun
 机构:
 代码: 
 ArXiv: 
@@ -21,14 +21,14 @@ tags:
 ## A.摘要
 
 > We introduce **OpenVoice**, a versatile instant voice cloning approach that requires only a short audio clip from the reference speaker to replicate their voice and generate speech in multiple languages. **OpenVoice** represents a significant advancement in addressing the following open challenges in the field: 
-> 1. Flexible Voice Style Control. **OpenVoice** enables granular control over voice styles, including emotion,accent, rhythm, pauses, and intonation, in addition to replicating the tone color of the reference speaker. The voice styles are not directly copied from and constrained by the style of the reference speaker. Previous approaches lacked the ability to flexibly manipulate voice styles after cloning. 
-> 2. Zero-Shot Cross-Lingual Voice Cloning. **OpenVoice** achieves zero-shot cross-lingual voice cloning for languages not included in the massive-speaker training set. Unlike previous approaches,which typically require extensive massive-speaker multi-lingual (MSML) dataset<sup>2</sup> for all languages, **OpenVoice** can clone voices into a new language without any massive-speaker training data for that language. 
+> 1. **Flexible Voice Style Control**. **OpenVoice** enables granular control over voice styles, including emotion,accent, rhythm, pauses, and intonation, in addition to replicating the tone color of the reference speaker. The voice styles are not directly copied from and constrained by the style of the reference speaker. Previous approaches lacked the ability to flexibly manipulate voice styles after cloning. 
+> 2. **Zero-Shot Cross-Lingual Voice Cloning**. **OpenVoice** achieves zero-shot cross-lingual voice cloning for languages not included in the massive-speaker training set. Unlike previous approaches,which typically require extensive massive-speaker multi-lingual (MSML) dataset<sup>2</sup> for all languages, **OpenVoice** can clone voices into a new language without any massive-speaker training data for that language. 
 >
 > **OpenVoice** is also computationally efficient, costing tens of times less than commercially available APIs that offer even inferior performance. To foster further research in the field, we have made the source code3and trained model publicly accessible. We also provide qualitative results in our demo website4. Prior to its public release, our internal version of **OpenVoice** was used tens of millions of times by users worldwide between May and October 2023, serving as the backend of MyShell.ai.
 
 ## 1.引言
 
-> Instant voice cloning (IVC) in text-to-speech (TTS) synthesis means the TTS model can clone the voice of any reference speaker given a short audio sample without additional training on the reference speaker.
+> **Instant voice cloning (IVC)** in **text-to-speech (TTS)** synthesis means the TTS model can clone the voice of any reference speaker given a short audio sample without additional training on the reference speaker.
 > It is also referred to as Zero-shot TTS.
 > IVC enables the users to flexibly customize the generated voice and exhibits tremendous value in a wide variety of real-world applications, such as media content creation, customized chatbots, and multi-modal interaction between humans and computers or large language models.
 
@@ -74,20 +74,29 @@ tags:
 > The technical approach is simple to implement but surprisingly effective.
 > We first present the intuition behind **OpenVoice**, then elaborate on the model structure and training.
 
+这种技术方法易于实施但很有效果.
+我们首先展示算法背后的直觉, 然后详细阐述模型结构和训练.
+
 ### 2.1.Intuition
 
 > The Hard.
 > It is obvious that simultaneously cloning the tone color for any speaker, enabling flexible control of all other styles, and adding new language with little effort could be very challenging.
 > It requires a huge amount of combinatorial datasets where the controlled parameters intersect, and pairs of data that only differ in one attribute, and are well-labeled, as well as a relatively large-capacity model to fit the dataset.
 
+难处: 显然同时克隆任意说话人的音色, 实现对其他风格的灵活控制, 且只需少许努力就能添加新语言是非常具有挑战性的. 这需要大量的组合数据集, 其中受控参数相交, 且成对数据只有一个属性不同, 且标记良好, 以及需要一个相对大容量的模型来拟合数据集.
+
 > The Easy.
-> We also notice that in regular single-speaker TTS, as long as voice cloning is not required,it is relatively easy to add control over other style parameters and add a new language.
-> For example,recording a single-speaker dataset with 10K short audio samples with labeled emotions and intonation is sufficient to train a single-speaker TTS model that provides control over emotion and intonation.
+> We also notice that in regular single-speaker TTS, as long as voice cloning is not required, it is relatively easy to add control over other style parameters and add a new language.
+> For example, recording a single-speaker dataset with 10K short audio samples with labeled emotions and intonation is sufficient to train a single-speaker TTS model that provides control over emotion and intonation.
 > Adding a new language or accent is also straightforward by including another speaker in the dataset.
+
+易处: 在常规的单说话人语音识别中,只要不要求声音克隆, 添加对其他风格参数的控制和添加一种新的语言相对容易. 例如用带有情绪和语调标签的 10K 短音频样本记录一个单说话人数据集足以训练一个能提供情感和语调控制的单说话人 TTS 模型. 可以通过在数据集中添加其他说话人来添加一种新语言或口音.
 
 > The intuition behind **OpenVoice** is to decouple the IVC task into separate subtasks where every subtask is much easier to achieve compared to the coupled task.
 > The cloning of tone color is fully decoupled from the control over all remaining style parameters and languages.
 > We propose to use a base speaker TTS model to control the style parameters and languages, and use a tone color converter to embody the reference tone color into the generated voice.
+
+OpenVoice 背后的直觉是将 IVC 任务解耦为单独的子任务, 每个子任务都要更容易完成. 音色克隆和其他的风格参数, 语言控制解耦. 建议使用一个基笨的说话人 TTS 模型以控制风格参数和语言, 并使用音色转换器将参考音色体现到生成的语音中.
 
 ### 2.2.模型结构
 
@@ -102,7 +111,7 @@ tags:
 > Other choices such as InstructTTS [17] can also accept style prompts.
 > It is also possible to use commercially available (and cheap) models such as Microsoft TTS, which accepts speech synthesis markup language (SSML) that specifies the emotion, pauses and articulation.
 > One can even skip the base speaker TTS model, and read the text by themselves in whatever styles and languages they desire.
-> In our **OpenVoice** implementation, we used the VITS [6] model by default,but other choices are completely feasible.
+> In our **OpenVoice** implementation, we used the VITS [6] model by default, but other choices are completely feasible.
 > We denote the outputs of the base model asX(LI, SI, CI),where the three parameters represent the language, styles and tone color respectively.
 > Similarly, the speech audio from the reference speaker is denoted as X(LO, SO, CO).
 
