--- a/Papers/2024.04_CLaM-TTS.md
+++ b/Papers/2024.04_CLaM-TTS.md
@@ -87,14 +87,15 @@
 > Here $\pmb{c}_{1,1:D}$ represents the set $\{c_{t,1},\cdots,c_{t,D}\}$ with $D$ indicating the total depth of the quantizer.
 > The latent representation from the encoder is quantized through the multi-stage nearest-neighbor lookup over the codebook embeddings, of which the vocab size is $V$.
 > The process is defined as finding the optimal code from the codebook, which minimizes the residual error at each depth $d$:
+> 
 > $$
->   c_{t,d} = \arg\min_{c'\in\{1,\cdots,V\}}\|\pmb{r}_{t,d-1}-e_\psi(c';d)\|^2\\
->   \pmb{r}_{t,d} =\pmb{r}_{t,d-1}-e_\psi(c_{t,d};d)
-> $$ 
+>   c_{t,d} = \arg\min_{c'\in\{1,\cdots,V\}}\|\pmb{r}_{t,d-1}-e_{\psi}(c';d)\|^2\\
+>   \pmb{r}_{t,d} =\pmb{r}_{t,d-1}-e_{\psi}(c_{t,d};d)
+> $$
 >
 > for all $d\in [1,D]$,
-> where $\pmb{r}_{t,0}=\pmb{z}_t$ and $e_\psi(c;d)$ corresponds to the $c$-th embedding vector in the codebook at depth $d$.
-> The sum of embeddings $\sum_{d=1}^D e_\psi(c_{t,d};d)$ becomes the quantized latent representation $\hat{\pmb{z}}_t$, which is converted back to the input space through the decoder. 
+> where $\pmb{r}_{t,0}=\pmb{z}_t$ and $e_{\psi}(c;d)$ corresponds to the $c$-th embedding vector in the codebook at depth $d$.
+> The sum of embeddings $\sum_{d=1}^D e_{\psi}(c_{t,d};d)$ becomes the quantized latent representation $\hat{\pmb{z}}_t$, which is converted back to the input space through the decoder. 
 > The codebook embeddings are updated with the clustered latents by the exponential moving average updates ([VQ-VAE-2 (2019)]()). 
 
 ### 3.2. Mean-Field Variational Inference 
