--- a/Papers/2024.04_HyperTTS.md
+++ b/Papers/2024.04_HyperTTS.md
@@ -12,7 +12,17 @@
 > We also compare different variants of **HyperTTS**, comparing them with baselines in different studies.Promising results on the dynamic adaptation of adapter parameters using hypernetworks open up new avenues for domain-generic multi-speaker TTS systems.
 > The audio samples and code are available at https://github.com/declare-lab/HyperTTS.
 
+神经语音合成或文本转语音的目的是将文本域的信号转换为语音域.
+虽然开发在相同的说话人集合上进行训练和测试的语音合成架构已经取得了显著的改进, 但对于域外说话人的性能仍然面临着巨大的限制.
+这一问题可以通过 Adapter, 一种参数高效的领域自适应来解决.
+尽管在自然语言处理中很有名, 但语音合成还没有从 Adapter 中获得太多的改进.
+在本文中, 我们提出了 **HyperTTS**, 它由一个小型可学习的网络, "超网络", 生成 Adapter 块的参数, 允许我们根据说话人表示来条件化适配器, 并使其动态.
+在两个领域自适应设置的广泛评估中, 我们证明了 **HyperTTS** 在参数高效的情况下取得了最先进的性能.
+我们还比较了 **HyperTTS** 的不同变体, 与不同研究中的基线进行了比较.
+通过使用超网络来动态适配器参数的可行性, 我们开辟了新的多说话人 TTS 系统的领域通用道路.
+
 ## 1.Introduction
+
 > Neural text-to-speech (TTS) synthesis has trans formed our interactions with digital content by converting text into natural-sounding speech.Cur rent TTS systems are often limited to predefined speaker styles or specific sets of speaker IDs (Ren et al., 2019a), reducing their utility in multi-speaker environments with unseen speakers.
 > To make TTS scalable and economical, parameter-efficient adaptation of such systems to new speakers is an important, but highly challenging problem (Li et al., 2023b).
 > Zero-shot and few-shot speaker adaptation techniques (Shen et al., 2023; Li et al., 2023a; Casanova et al., 2021; Cooper et al., 2020; Casanova et al., 2022; Shen et al., 2023) have gained prominence in the domain of TTS, aiming at accommodating new speakers and styles with limited speaker-specific data.
@@ -28,16 +38,18 @@
 > 1. Dynamic Adapters: Instead of keeping the adapters static, for each speaker in the adaptation domain, **HyperTTS** learns speaker adaptive adapters.Adapter conditioning on speaker representations is observed to unlock adapter capabilities and make them performant which was a challenge with static adapters (Li et al., 2023b).
 > 2. Parameter Sampling: A large set of speak ers makes it infeasible to keep the space of adapter parameters discrete.
 > To facilitate this, we employ parameter sampling from a continuous distribution defined by a learnable hyper network.
-> 3. ParameterEfficiency: Compared to parameter-expensive fine-tuning, it achieves competitive results with less than1% of the backbone parameters, making it highly practical and resource-friendly for scalable applications..
+> 3. ParameterEfficiency: Compared to parameter-expensive fine-tuning, it achieves competitive results with less than1% of the backbone parameters, making it highly practical and resource-friendly for scalable applications.
 
 > We perform a comprehensive set of experiments to showcase **HyperTTS**’s effectiveness (see Figure 1) compared to traditional methods like static bottleneck adapters (AdapterTTS) and full model fine-tuning (TTS-FT).
 > Our experiments cover datasets from diverse environmental conditions, such as LibriTTS and VCTK, representing various accents from different regions.
 > Results highlight **HyperTTS**’s parameter-efficient performance advantages over the baselines across both objective and subjective metrics.Notably, **HyperTTS** can even surpass fine-tuning in performance with only a 20% increase in parameters (Table 6-**HyperTTS**<sub>e/v/d</sub>).
 > A key strength of **HyperTTS** lies in its remarkable parameter efficiency: it achieves results within 1 point of fine-tuning while using less than 1% of the parameter count in the backbone.
-> This practical and resource-friendly approach enables real-world applications..
+> This practical and resource-friendly approach enables real-world applications.
 
 ## 2.Related Work
+
 ### Text-to-Speech Models
+
 > The rise of deep learning has transformed TTS technology, with neural network-based architectures like [Tacotron (2017)](2017.03_Tacotron.md); [Tacotron2 (2017)](2017.12_Tacotron2.md), [FastSpeech2 (2020)](2020.06_FastSpeech2.md), and [Transformer-TTS (2018)](2018.09_Transformer_TTS.md) leading the way.
 > These models represent significant progress in TTS, leveraging deep learning techniques.
 
@@ -45,7 +57,7 @@
 
 > In contrast, non-autoregressive (parallel) models separate phoneme duration estimation from decoding, reducing latency and enhancing training efficiency.
 > These models typically rely on external aligners or pre-trained autoregressive models for phoneme duration.
-> To achieve training efficiency and support end-to-end TTS, this paper focuses on a non-autoregressive TTS model with an alignment framework based on the [RAD-TTS]() alignment learning objective, as proposed by Badlani et al.(2022).
+> To achieve training efficiency and support end-to-end TTS, this paper focuses on a non-autoregressive TTS model with an alignment framework based on the [RAD-TTS (2022)]() alignment learning objective.
 
 > Recently, several speech models have been compared to GPT in natural language processing, with a focus on in-context learning for speech.
 > Notably, [VALL-E (2023)](2023.01_VALL-E.md) and [SPEAR-TTS (2023)](2023.02_SPEAR-TTS.md) leverage emerging codecs to learn discrete speech tokens and employ a vocoder-like decodec to convert these tokens into waveforms.
@@ -56,15 +68,15 @@
 > Speaker adaptation is a crucial aspect of TTS systems, aiming to personalize the synthesized speech by modify ing the voice characteristics to match those of a specific target speaker.
 > Over the years, various techniques and approaches have been proposed to address the challenges associated with speaker adaptation in TTS (Jia et al., 2018; Chen et al.; Min et al., 2021; Hsieh et al., 2022; Gabry´s et al.2022).
 > Furthermore, several studies have focused on exploring parameter-efficient methods for adapt ing TTS to new sets of speakers, addressing the need for effective adaptation in diverse speaker scenarios.
-> These approaches aim to accommo date a wide range of linguistic variations (Pamisetty et al., 2023; Do et al., 2022), including diverse ac cents (Yang et al., 2023), speakers (Luo et al., 2021; Miao et al., 2021; Mehrish et al., 2023a), and low-resource scenarios introduced by the tar get domain (Azizah and Jatmiko, 2022; Mehrish et al., 2023a; Lux and Vu, 2022), while maintain ing the number of trainable parameters.
-> HYPER TTS primarily focuses on contributing in the line of parameter-efficient domain adaptation of the back bone TTS model to a target set of speakers..
+> These approaches aim to accommodate a wide range of linguistic variations (Pamisetty et al., 2023; Do et al., 2022), including diverse ac cents (Yang et al., 2023), speakers (Luo et al., 2021; Miao et al., 2021; Mehrish et al., 2023a), and low-resource scenarios introduced by the tar get domain (Azizah and Jatmiko, 2022; Mehrish et al., 2023a; Lux and Vu, 2022), while maintain ing the number of trainable parameters.
+> HYPER TTS primarily focuses on contributing in the line of parameter-efficient domain adaptation of the back bone TTS model to a target set of speakers.
 
 ### Dynamic Parameters
 
 > Parameter generation, although not popular in speech, has been used in various forms in other domains, such as Klein et al. (2015); Riegler et al. (2015) in NLP and Ha et al. (2017) in computer vision.
-> Specific to adapters, Bhardwaj et al. (2022); Chen et al. (2020) make prompt tokens dynamic by conditioning their val ues on input text using a parameter prompt gener ator network, (Üstün et al., 2022; Mahabadi et al., 2021) used hypernetworks for generating adapter down and up-projection weights.
-> Shared hypernet works obviate the need to maintain a separate set of parameters for each task (or new setting) and generate weights for each block of the backbone network (Mahabadi et al., 2021).
-> To the best of our knowledge, this is the first work that studies the utility of a parameter generator in the domain of speech (Mehrish et al., 2023b)..
+> Specific to adapters, Bhardwaj et al. (2022); Chen et al. (2020) make prompt tokens dynamic by conditioning their val ues on input text using a parameter prompt generator network, (Üstün et al., 2022; Mahabadi et al., 2021) used hypernetworks for generating adapter down and up-projection weights.
+> Shared hypernetworks obviate the need to maintain a separate set of parameters for each task (or new setting) and generate weights for each block of the backbone network (Mahabadi et al., 2021).
+> To the best of our knowledge, this is the first work that studies the utility of a parameter generator in the domain of speech (Mehrish et al., 2023b).
 
 
 ## 3.Methodology
@@ -76,7 +88,7 @@
 #### Energy Predictor
 ### 3.3.Mel-Decoder and Postnet
 ### 3.4.Hypernetwork
-#### Implemenation
+#### Implementation
 
 ## 4.Experiments
 ### 4.1.Baseline Models
