--- a/Papers/2023.01_VALL-E/2023.01_VALL-E.md
+++ b/Papers/2023.01_VALL-E/2023.01_VALL-E.md
@@ -2,37 +2,43 @@
 PDF: 
 标题: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers
 作者:
-  - Chengyi Wang, Sanyuan Chen, Yu Wu, Ziqiang Zhang, Long Zhou, Shujie Liu, Zhuo Chen, Yanqing Liu, Huaming Wang, Jinyu Li, Lei He, Sheng Zhao, Furu Wei
+  - 王程一
+  - 陈三元
+  - 吴俣
+  - 周龙
+  - 刘树杰
+  - Zhuo Chen
+  - Yanqing Liu
+  - Huaming Wang
+  - Jinyu Li
+  - Lei He
+  - Sheng Zhao
+  - 韦福如
 机构:
-  - 微软
+  - Microsoft
 代码: 
-ArXiv: 2301.02111
-提出时间: 2023.01.05
+ArXiv: https://arxiv.org/abs/2301.02111
+提出时间: 2023-01-05
 出版社: 
 发表期刊: 
 发表时间: 
 引文数量: 49
 被引次数: 236
 tags:
-  - 语音合成
-  - 情感语音
-  - zero-shot
-  - 神经编解码器
-  - 语言模型
+  - 语音合成_TTS
+  - 零样本_Zero-Shot
+  - 编解码器_Codec
+  - 大语言模型_LLM
+aliases: VALL-E
+ArXiv最新版本: 1
+ArXiv最新时间: 2023-01-05
+PageNum: 16
+Demo: https://www.microsoft.com/en-us/research/project/vall-e-x/vall-e/
 ---
 
 # VALL-E: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers
 
-| 信息  | 值                            |
-| --- | ---------------------------- |
-| 作者  | [王程一](../Authors/王程一_(Chengyi_Wang).md) [陈三元](../Authors/陈三元_(Sanyuan_Chen).md), [吴俣](../Authors/吴俣_(Yu_Wu).md), Ziqiang Zhang, [周龙](../Authors/周龙_(Long_Zhou).md), [刘树杰](../Authors/刘树杰_(Shujie_Liu).md), [Zhuo Chen](../Authors/Zhuo_Chen.md), [Yanqing Liu](../Authors/Yanqing_Liu.md), [Huaming Wang](../Authors/Huaming_Wang.md), [Jinyu Li](../Authors/Jinyu_Li.md), [Lei He](../Authors/Lei_He.md), [Sheng Zhao](../Authors/Sheng_Zhao.md), [韦福如](../Authors/韦福如_(Furu_Wei).md)|                              |
-| 机构  | Miscorsoft                             |
-| 时间  | 2023.01.05                             |
-| 链接  | [>ArXiv<](https://arxiv.org/abs/2301.02111) [>DOI<] [>Github<] |
-| 标签  | [#LLM]()  [#TTS]() [#Zero-Shot]() [#Codec]()                  |
-
-
-
+[王程一](../Authors/王程一_(Chengyi_Wang).md) [陈三元](../Authors/陈三元_(Sanyuan_Chen).md), [吴俣](../Authors/吴俣_(Yu_Wu).md), Ziqiang Zhang, [周龙](../Authors/周龙_(Long_Zhou).md), [刘树杰](../Authors/刘树杰_(Shujie_Liu).md), [Zhuo Chen](../Authors/Zhuo_Chen.md), [Yanqing Liu](../Authors/Yanqing_Liu.md), [Huaming Wang](../Authors/Huaming_Wang.md), [Jinyu Li](../Authors/Jinyu_Li.md), [Lei He](../Authors/Lei_He.md), [Sheng Zhao](../Authors/Sheng_Zhao.md), [韦福如](../Authors/韦福如_(Furu_Wei).md)
 
 ## Abstract
 
