--- a/Papers/2023.01_VALL-E/2023.01_VALL-E.md
+++ b/Papers/2023.01_VALL-E/2023.01_VALL-E.md
@@ -38,7 +38,15 @@ Demo: https://www.microsoft.com/en-us/research/project/vall-e-x/vall-e/
 
 # VALL-E: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers
 
-[王程一](../Authors/王程一_(Chengyi_Wang).md) [陈三元](../Authors/陈三元_(Sanyuan_Chen).md), [吴俣](../Authors/吴俣_(Yu_Wu).md), [Ziqiang Zhang](../Authors/Ziqiang_Zhang.md), [周龙](../Authors/周龙_(Long_Zhou).md), [刘树杰](../Authors/刘树杰_(Shujie_Liu).md), [Zhuo Chen](../Authors/Zhuo_Chen.md), [Yanqing Liu](../Authors/Yanqing_Liu.md), [Huaming Wang](../Authors/Huaming_Wang.md), [Jinyu Li](../Authors/Jinyu_Li.md), [Lei He](../Authors/Lei_He.md), [Sheng Zhao](../Authors/Sheng_Zhao.md), [韦福如](../Authors/韦福如_(Furu_Wei).md)
+|作者|机构|作者|机构|
+|:-:|:-:|:-:|:-:|
+|[王程一](../Authors/王程一_(Chengyi_Wang).md)|[Microsoft](../Institutions/Microsoft.md)|[陈三元](../Authors/陈三元_(Sanyuan_Chen).md)|[Microsoft](../Institutions/Microsoft.md)|
+|[吴俣](../Authors/吴俣_(Yu_Wu).md)|[Microsoft](../Institutions/Microsoft.md)|[张自强](../Authors/张自强_(Ziqiang_Zhang).md)|[Microsoft](../Institutions/Microsoft.md)|
+|[周龙](../Authors/周龙_(Long_Zhou).md)|[Microsoft](../Institutions/Microsoft.md)|[刘树杰](../Authors/刘树杰_(Shujie_Liu).md)|[Microsoft](../Institutions/Microsoft.md)|
+|[Zhuo Chen](../Authors/Zhuo_Chen.md)|[Microsoft](../Institutions/Microsoft.md)|[Yanqing Liu](../Authors/Yanqing_Liu.md)|[Microsoft](../Institutions/Microsoft.md)|
+|[Huaming Wang](../Authors/Huaming_Wang.md)|[Microsoft](../Institutions/Microsoft.md)|[李劲宇](../Authors/李劲宇_(Jinyu_Li).md)|[Microsoft](../Institutions/Microsoft.md)|
+|[何磊](../Authors/何磊_(Lei_He).md)|[Microsoft](../Institutions/Microsoft.md)|[赵胜](../Authors/赵胜_(Sheng_Zhao).md)|[Microsoft](../Institutions/Microsoft.md)|
+|[韦福如](../Authors/韦福如_(Furu_Wei).md)|[Microsoft](../Institutions/Microsoft.md)|
 
 ## Abstract
 
