--- a/Papers/2024.04.29_MM-TTS/2024.04.29_MM-TTS.md
+++ b/Papers/2024.04.29_MM-TTS/2024.04.29_MM-TTS.md
@@ -7,7 +7,8 @@
   - Xiaojiang Peng
   - Alexander G. Hauptmann
 机构: 
-代码: https://anonymous.4open.science/r/MMTTS-D214 ArXiv: https://arxiv.org/abs/2404.18398
+代码: https://anonymous.4open.science/r/MMTTS-D214 
+ArXiv: https://arxiv.org/abs/2404.18398
 提出时间: 2024-04-29
 出版社: 
 发表期刊: 
@@ -51,13 +52,13 @@ Demo:
 > However, these methods often struggle to fully capture the intricacies of human emotions due to their reliance on oversimplified representations or single-modality inputs.
 > To truly unlock the potential of E-TTS and create emotionally resonant synthetic speech, a more comprehensive approach leveraging rich emotional information across multiple modalities is crucial.
 
-> Consider a voiceover scenario where one aims to generate emotionally consistent speech for a given dialogue, potentially with access to visual cues such as facial expressions, silent video clips, and reference audio samples, as shown in Figure 1.
+> Consider a voiceover scenario where one aims to generate emotionally consistent speech for a given dialogue, potentially with access to visual cues such as facial expressions, silent video clips, and reference audio samples, as shown in Fig.01.
 > Traditional E-TTS approaches relying on unimodal information have inherent limitations.
 > Facial expressions are dynamic, and their emotional interpretation can vary significantly depending on context.
 > Similarly, using reference emotional audio alone fails to capture the nuanced interplay of emotions across scenarios.
 > Moreover, in real-world applications, the availability of different modalities may vary.
 > Leveraging multimodal cues enables a more comprehensive understanding of the underlying emotional state, leading to the generation of speech with more intricate and nuanced emotional expressions tailored to the specific context.
-> Such multimodal integration enables a more flexible approach to emotional speech synthesis, catering to the intricate demands of human-computer interaction and content creation (e.g.Figure 1).
+> Such multimodal integration enables a more flexible approach to emotional speech synthesis, catering to the intricate demands of human-computer interaction and content creation (e.g.Fig.01).
 
 > In response, we present the Multimodal Emotional Text-to-Speech System (MM-TTS), a groundbreaking framework designed to elevate the expressiveness of synthesized speech by incorporating multimodal cues encompassing text, audio, and visual information (Sec.3).
 > MM-TTS comprises two critical components: the Emotion Prompt Alignment Module (EP-Align) and the Emotion Embedding-Induced TTS (EMI-TTS).
@@ -102,7 +103,7 @@ Demo:
 > Moreover, [46] explores techniques for transferring the emotional style from reference speech to synthesized speech. 
 > (3) Some studies utilize textual descriptions of emotions as conditioning data, with [47] and [12] demonstrating effective conveyance of target emotions through guided textual descriptions in speech synthesis.
 > Despite advancements, previous ETTS approaches often face limitations like reliance on a single modality or simplistic emotional representations.
-> Table 1 outlines these differences across existing models, focusing on supported emotion categories, conditioning data types, and zero-shot learning capabilities.
+> Tab.01 outlines these differences across existing models, focusing on supported emotion categories, conditioning data types, and zero-shot learning capabilities.
 > Addressing these limitations, our proposed framework, MM-TTS, employs multimodal representation learning to integrate diverse emotion-related data, enabling the generation of emotionally rich speech.
 
 ### 2.3.Multi-Modal Representation Learning
@@ -120,7 +121,7 @@ Demo:
 ## 3.MM-TTS Framework
 
 > The primary goal of MM-TTS is to leverage emotions extracted from multiple modalities to generate emotional speech for different individuals in a data-efficient manner.
-> Figure 2 illustrates the framework comprising two main components: (1) Emotion Prompt Alignment Module (EP-Align) and (2) Emotion Embedding-induced TTS (EMI-TTS).
+> Fig.02 illustrates the framework comprising two main components: (1) Emotion Prompt Alignment Module (EP-Align) and (2) Emotion Embedding-induced TTS (EMI-TTS).
 
 > (1) Emotion Prompt Alignment Module (EP-Align) plays a crucial role in aligning the emotional representations derived from various modalities, such as visual data, audio segments, and textual descriptions.
 > It takes a multimodal emotional data tuple $Tup^{emo}=<v,a,s,p>$ as input, where $v$ represents visual data (image or video), $a$ is an audio segment, $s$ denotes an emotional text description, and $p$ is an emotional prompt label.
@@ -338,7 +339,7 @@ $$
 
 #### 4.3.1.Word Error Rate and Character Error Rate (WER and CER).
 
-> Table 2 presents a comparison of WER and CER for different TTS models on ESD to illustrate the performance improvement achieved by the MM-TTS framework.
+> Tab.02 presents a comparison of WER and CER for different TTS models on ESD to illustrate the performance improvement achieved by the MM-TTS framework.
 > The MM-TTS implementation with the FastSpeech structure achieves the lowest WER at 7.35% and CER at 3.07%, indicating an effective approximation to the ground truth audio quality.
 > This performance surpasses other implementations such as VITS, Tacotron, and the EmoSpeech [6] models.
 > This improvement is due to the multimodal emotion alignment within MM-TTS, which improves the extraction and representation of emotion features, allowing for better model convergence and superior generalization capabilities in speech synthesis.
@@ -346,7 +347,7 @@ $$
 
 #### 4.3.2.Emotion Similarity Mean Opinion Score (MOS).
 
-> The subjective evaluations presented in Table 3 illustrate the effectiveness of the MM-TTS models in generating emotionally congruent speech.
+> The subjective evaluations presented in Tab.03 illustrate the effectiveness of the MM-TTS models in generating emotionally congruent speech.
 > The MM-TTS (FastSpeech) variant notably scored an average MOS of 4.37, closely matching the ground truth (MOS of 4.57) and surpassing other models.
 > This performance highlights the MM-TTS framework’s capability to effectively capture and render nuanced emotional expressions, with scores across various emotions showing consistent improvement over other TTS models.
 > This indicates a robust alignment of emotional tones in speech synthesis, positioning MM-TTS (FastSpeech) as a leading solution in emotional TTS technologies.
@@ -367,7 +368,7 @@ $$
 #### 4.4.1.Effectiveness of Multimodal Fusion.
 
 > To evaluate the impact of the Emotion Prompt Alignment Module (EP-Align) on improving emotion recognition, we conducted a series of tests using the MELD dataset, which is known for its rich multimodal input.
-> Table 6 clearly demonstrates that EP-Align significantly improves emotion recognition accuracy.
+> Tab.06 clearly demonstrates that EP-Align significantly improves emotion recognition accuracy.
 > Notably, the configuration using combined modalities, which synthesizes text, audio, and video inputs, shows the most marked improvement, with a F1 score increase from 0.68 to 0.75.
 > This highlights EP-Align’s effectiveness in multimodal fusion, proving crucial in environments where emotional cues are inherently dispersed across different channels.
 > By seamlessly blending these inputs, EP-Align enhances the coherence and precision of emotion classification systems.
@@ -378,12 +379,12 @@ $$
 > Confusion matrices are instrumental in evaluating classification models by illustrating the accuracy across different classes and highlighting potential areas of misclassification.
 > Figures 3 and 4 present the confusion matrices for the MELD and RAF-DB datasets, respectively, following the integration of the Emotion Prompt Alignment Module (EP-Align).
 > These matrices provide insights into EP-Align’s performance in aligning multimodal inputs to predict complex emotional states accurately.
-> Specifically, Figure 3 depicts the classification results for the MELD dataset, which includes a range of basic and complex emotions.
+> Specifically, Fig.03 depicts the classification results for the MELD dataset, which includes a range of basic and complex emotions.
 > This visualization helps identify which emotions EP-Align accurately recognizes and where it tends to confuse one emotion for another.
 > For instance, a common misclassification might be the confusion between ’joy’ and ’surprise’, which often share similar expressive features.
 > By examining these overlaps, we can better understand the nuances of EP-Align’s performance, including its strengths in distinguishing closely related emotional states and its limitations.
 
-> Similarly, the confusion matrix for the RAF-DB dataset, shown in Figure 4, illustrates the classification results for compound emotions, which are inherently more complex due to the blending of multiple emotional states.
+> Similarly, the confusion matrix for the RAF-DB dataset, shown in Fig.04, illustrates the classification results for compound emotions, which are inherently more complex due to the blending of multiple emotional states.
 > This matrix is particularly useful for assessing EP-Align’s effectiveness in resolving the intricacies of compound emotions.
 > For example, the misclassifications between ’happiness’ combined with ’surprise’ versus ’happiness’ combined with ’sadness’ indicate the challenges in distinguishing between subtle emotional blends.
 > Insights from this analysis guide further improvements in EP-Align’s algorithm to enhance its sensitivity to subtle emotional distinctions.
@@ -391,7 +392,7 @@ $$
 #### 4.4.3.Impact on Synthesized Speech Quality.
 
 > To empirically verify the impact of EP-Align on synthesized speech quality, we conducted a detailed analysis comparing the performance of speech synthesis systems with and without EP-Align.
-> As Table 7 shows, integrating EP-Align results in notable improvements across all evaluated metrics.
+> As Tab.07 shows, integrating EP-Align results in notable improvements across all evaluated metrics.
 > Specifically, the reduction in WER from 8.50% to 7.35% and in CER from 3.90% to 3.07% suggest that EP-Align significantly enhances the phonetic precision of the synthesized speech.
 > Furthermore, the increase in MOS from 4.12 to 4.37 highlights an improvement in the overall subjective listening experience of the synthesized speech.
 > These improvements suggest that EP-Align effectively adjusts the alignment of phonetic elements, which is crucial for producing clear and accurate speech.
@@ -430,7 +431,7 @@ $$
 
 ### 6.1.Implementation Details of Emotion Embedding-Induced TTS
 
-> This section presents implementation details of the emotion embedding-induced text-to-speech (EMI-TTS) component, mentioned in Section 3.2 of the original paper, as shown in Figure 2, which aims to introduce emotional expression into text-to-speech (TTS) synthesis.
+> This section presents implementation details of the emotion embedding-induced text-to-speech (EMI-TTS) component, mentioned in Section 3.2 of the original paper, as shown in Fig.02, which aims to introduce emotional expression into text-to-speech (TTS) synthesis.
 
 > The EMI-TTS component is implemented across three TTS architectures: Variant VITS, Variant FastSpeech2, and Variant Tacotron2.
 
@@ -443,8 +444,8 @@ $$
 > The model is inspired by the architecture of WaveGlow [33] and Glow-TTS [20], using affine coupling layers containing Emotional WaveNet residual blocks.
 > These blocks capture and express emotional nuances in synthesized speech.
 
-> The Variant VITS model, as shown on the left of the Emotion embedding-induced TTS (EMI-TTS) part of Figure 2, uses global conditioning techniques [43] to integrate emotional information into the speech synthesis pipeline.
-> These techniques insert emotion embeddings, represented as$u^{emo}$, into components such as the Spectrogram Encoder and Emotional WaveNet (EWN) in Emotion-condition FLow.
+> The Variant VITS model, as shown on the left of the Emotion embedding-induced TTS (EMI-TTS) part of Fig.02, uses global conditioning techniques [43] to integrate emotional information into the speech synthesis pipeline.
+> These techniques insert emotion embeddings, represented as $u^{emo}$, into components such as the Spectrogram Encoder and Emotional WaveNet (EWN) in Emotion-condition FLow.
 > The integration process is controlled by the following operations:
 
 $$
@@ -465,7 +466,7 @@ $$
 
 #### 6.1.2.Variant FastSpeech2.
 
-> The FastSpeech2 architecture is improved by the Variant FastSpeech2 model, as shown in the middle of the Emotion embedding-induced TTS (EMI-TTS) part of Figure 2, resulting in advancements in expressive speech synthesis.
+> The FastSpeech2 architecture is improved by the Variant FastSpeech2 model, as shown in the middle of the Emotion embedding-induced TTS (EMI-TTS) part of Fig.02, resulting in advancements in expressive speech synthesis.
 > This model incorporates a Conditional Cross-Attention mechanism, inspired by the EmoSpeech approach [6], to manage the interplay between speaker identity and emotional tone.
 > The integration of these elements aims to enhance emotional modulation in the synthesized speech.
 
@@ -492,8 +493,8 @@ $$
 
 #### 6.1.3.Variation Tacotron2.
 
-> The Tacotron2 framework has evolved into the Variant Tacotron2 model, as shown in the right of the Emotion embedding-induced TTS (EMI-TTS) part of Figure 2, which incorporates emotional expressions into its speech synthesis process.
-> The model integrates aligned emotion embeddings$u^{emo}$by concatenating them with character-encoded hidden states $h_{lg}$ and speaker embeddings $u_{spk}$ .
+> The Tacotron2 framework has evolved into the Variant Tacotron2 model, as shown in the right of the Emotion embedding-induced TTS (EMI-TTS) part of Fig.02, which incorporates emotional expressions into its speech synthesis process.
+> The model integrates aligned emotion embeddings $u^{emo}$ by concatenating them with character-encoded hidden states $h_{lg}$ and speaker embeddings $u_{spk}$ .
 > This approach allows emotional context to be taken into account throughout the synthesis process, thereby affecting the prosody and intonation of the speech:
 
 $$
@@ -503,7 +504,7 @@ $$
 > New attention mechanisms address the spatial and emotional components of speech synthesis, producing output that maintains natural intonation and is consistent with the desired emotional tone.
 
 > The process involves the following steps:
-> (1) Concatenation of embeddings: Aligned emotion embeddings$u^{emo}$concatenated with hidden states derived from character encoders and speaker embeddings.
+> (1) Concatenation of embeddings: Aligned emotion embeddings $u^{emo}$ concatenated with hidden states derived from character encoders and speaker embeddings.
 > This composite feature vector is used as input to the attention mechanism.
 > (2) Enhanced attention mechanism: The attention mechanism has been updated to incorporate emotional cues and adjust how it processes text and sound information.
 > This modification enables the model to capture a wider range of emotional nuances.
@@ -520,11 +521,11 @@ $$
 
 #### 6.2.1.Voiceover Scenario.
 
-> In the Voiceover Scenario module, as shown in Figure 5, we illustrate how the Emotion Prompt Alignment Module (EPAlign) can extract emotional cues from multimodal scenarios, enabling the Emotion Embedding-Induced TTS (EMI-TTS) to generate contextually appropriate emotional speech.
+> In the Voiceover Scenario module, as shown in Fig.05, we illustrate how the Emotion Prompt Alignment Module (EPAlign) can extract emotional cues from multimodal scenarios, enabling the Emotion Embedding-Induced TTS (EMI-TTS) to generate contextually appropriate emotional speech.
 > This capability is particularly valuable in applications that require voiceovers or narrations to seamlessly align with the emotional tone and context of multimedia content.
 
-> This figure presents a dialogue scene from a movie clip, with the left four columns representing multimodal references for emotion extraction: the origin video without sound, the origin face image, the origin speech audio, and the origin text transcript.
-> The fifth column displays the inferred aligned emotion representation $u^{emo}$’s class, where$u^{emo}$is obtained through the EPAlign module by aligning the emotional cues from these multimodal inputs into a shared embedding space.
+> This Fig.05 presents a dialogue scene from a movie clip, with the left four columns representing multimodal references for emotion extraction: the origin video without sound, the origin face image, the origin speech audio, and the origin text transcript.
+> The fifth column displays the inferred aligned emotion representation $u^{emo}$’s class, where $u^{emo}$ is obtained through the EPAlign module by aligning the emotional cues from these multimodal inputs into a shared embedding space.
 > The final two columns showcase the emotional speech generated by EMI-TTS for two different speakers, effectively conveying the identified emotion while preserving the respective speaker characteristics.
 
 > By leveraging the complementary emotional information present across various modalities, such as visual cues (character expressions and scene visuals), auditory cues (speech waveforms), and textual cues (dialogue transcripts), EPAlign can disentangle and align the intricate emotional nuances exhibited in the multimedia content.
@@ -535,7 +536,7 @@ $$
 > By effectively aligning and fusing emotional cues from multiple modalities, MM-TTS can produce voiceovers that not only convey the desired emotional expressions but also maintain consistency with the overall emotional context of the multimedia content, thereby enhancing the immersive experience for end-users.
 
 #### 6.2.2.Emotional Text-to-Speech Synthesis.
-> The Emotional Text-toSpeech Synthesis demo, as shown in Figure 6, presents randomly selected emotional speech samples generated by EMI-TTS, along with comparative samples from other models [6,23].
+> The Emotional Text-toSpeech Synthesis demo, as shown in Fig.06, presents randomly selected emotional speech samples generated by EMI-TTS, along with comparative samples from other models [6,23].
 > This comparison highlights EMI-TTS’s ability to provide a unified framework that integrates various TTS architectures, such as Tacotron2 [38], VITS[21], and FastSpeech2 [36].
 > By leveraging the EPAlign and EMI-TTS components, MM-TTS demonstrates enhanced emotional speech generation capabilities, outperforming traditional approaches.
 
@@ -550,7 +551,7 @@ $$
 
 #### 6.2.3.Zero-Shot Emotional Speech.
 
-> The zero-shot emotional speech demo, as shown in Figure 7, showcases the zero-shot generalization capabilities of MM-TTS by generating emotional speech guided by complex, compound emotions.
+> The zero-shot emotional speech demo, as shown in Fig.07, showcases the zero-shot generalization capabilities of MM-TTS by generating emotional speech guided by complex, compound emotions.
 > By aligning emotional prompts within the shared emotion space using EPAlign, EMI-TTS can synthesize emotional speech for emotion categories unseen during training.
 > This ability opens up new avenues for creative expression and personalization in emotional speech synthesis, enabling users to craft tailored emotional expressions beyond those encountered in the training data.
 
