--- a/Books/2023.02_HuggingFace自然语言处理详解/Ch03.使用数据集工具.md
+++ b/Books/2023.02_HuggingFace自然语言处理详解/Ch03.使用数据集工具.md
@@ -1,5 +1,7 @@
 # 第03章.使用数据集工具
 
+[代码文件](PythonFiles/Ch03.Datasets.py)
+
 ## 3.1.数据集工具介绍
 
 在以往的自然语言处理任务中会花费大量的时间在数据处理上, 针对不同的数据集往往需要不同的处理过程, 各个数据集的格式差异大, 处理起来复杂又容易出错.
