--- a/Models/VoiceConversion/2024.03_PAVITS.md
+++ b/Models/VoiceConversion/2024.03_PAVITS.md
@@ -62,12 +62,12 @@ Demo: https://jeremychee4.github.io/pavits4EVC/
 > Despite these works have achieved great success in EVC, the converted audio still falls short in meeting human’s perceptual needs, which implies that these two challenges still remain to be effectively addressed.
 > Remarkably, current EVC models generally operate in a cascade manner, i.e., the acoustic converter and the vocoder [1, 5, 7, 8], resulting in a mismatch between emotional prosody training and run-time conversion, ultimately leading to a degradation in audio quality, which is vital to evaluate content naturalness and impacts the perceptual experience of emotional utterance.
 > However, there is no EVC model that attempt to bridge this gap, let alone models that aim to capture prosody variations at a finer granularity.
-> To handle the similar issue, multiple solutions have been explored in TTS, including [FastSpeech2s (2020)](../2019.05_FastSpeech/2020.06_FastSpeech2.md), EATS [17], [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) [19], etc., seeking to alleviate the mismatch between acoustic feature generation and waveform reconstruction by integrating these two stages together.
+> To handle the similar issue, multiple solutions have been explored in TTS, including [FastSpeech2s (2020)](../../Models/AV1_Acoustic/2020.06_FastSpeech2.md), EATS [17], [VITS (2021)](../../Models/E2E/2021.06_VITS.md) [19], etc., seeking to alleviate the mismatch between acoustic feature generation and waveform reconstruction by integrating these two stages together.
 
-> In this paper, inspired by the high audio quality of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), we propose **Prosody-Aware VITS (PAVITS)** for EVC, a novel end-to-end system with implicit prosody modeling to enhance content naturalness and emotional naturalness.
+> In this paper, inspired by the high audio quality of [VITS (2021)](../../Models/E2E/2021.06_VITS.md), we propose **Prosody-Aware VITS (PAVITS)** for EVC, a novel end-to-end system with implicit prosody modeling to enhance content naturalness and emotional naturalness.
 > To our best knowledge, **PAVITS** is the first EVC method in solving the mismatch between acoustic feature conversion and waveform reconstruction.
-> Compared to [original VITS (2021)](../2021.06_VITS/2021.06_VITS.md), our approach involves several key innovations.
-> In order to improve content naturalness with speech quality, we build upon [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) to solve the two-stage mismatch in EVC, and apply multi-task learning since TTS can significantly reduce the mispronunciation.
+> Compared to [original VITS (2021)](../../Models/E2E/2021.06_VITS.md), our approach involves several key innovations.
+> In order to improve content naturalness with speech quality, we build upon [VITS (2021)](../../Models/E2E/2021.06_VITS.md) to solve the two-stage mismatch in EVC, and apply multi-task learning since TTS can significantly reduce the mispronunciation.
 > To enhance emotional naturalness, we introduce an emotion descriptor to capture prosody differences associated with different emotional states in speech.
 > By utilizing Valence-Arousal-Dominance values as condition, emotional representation at utterance-level is learned.
 > Latent code is further refined by a prosody integrator, which incorporates with speaker identity and linguistic content to model finer-grained prosody variations.
@@ -77,7 +77,7 @@ Demo: https://jeremychee4.github.io/pavits4EVC/
 
 ## 2.Proposed Method
 
-> As shown in Fig.01, inspired by [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), the proposed model is constructed based on conditional variational autoencoder (CVAE), consisting of four parts: a textual prosody prediction module, an acoustic prosody modeling module, an information alignment module, and an emotional speech synthesis module.
+> As shown in Fig.01, inspired by [VITS (2021)](../../Models/E2E/2021.06_VITS.md), the proposed model is constructed based on conditional variational autoencoder (CVAE), consisting of four parts: a textual prosody prediction module, an acoustic prosody modeling module, an information alignment module, and an emotional speech synthesis module.
 
 > The textual prosody prediction (TPP) module predicts the prior distribution $p(z_1|c_1)$ as:
 
@@ -118,7 +118,7 @@ $$
 $$
 
 > Text Encoder: Since the training process is constrained by the volume of textual content within parallel datasets, we initially convert text or characters into a phoneme sequence as a preprocessing step to maximize the utility of the available data, resulting in improved compatibility with the acoustic prosody modeling module.
-> Similar to [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), text encoder comprises multiple Feed-Forward Transformer (FFT) blocks with a linear projection layer for representing linguistic information.
+> Similar to [VITS (2021)](../../Models/E2E/2021.06_VITS.md), text encoder comprises multiple Feed-Forward Transformer (FFT) blocks with a linear projection layer for representing linguistic information.
 
 > Prosody Predictor: Prosody predictor leverages phoneme-level linguistic information extracted by the text encoder to anticipate frame-level prosody variation given discrete emotion label.
 > It has been observed that simply increasing the depth of stacked flow does not yield satisfactory emotional prosody variations, unlike the prosody predictor.
@@ -145,7 +145,7 @@ $$
 
 ### 2.3.Information Alignment Module
 
-> In [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), the existing alignment mechanism, which is called Monotonic Alignment Search (MAS), solely relies on textual and acoustic features from parallel datasets.
+> In [VITS (2021)](../../Models/E2E/2021.06_VITS.md), the existing alignment mechanism, which is called Monotonic Alignment Search (MAS), solely relies on textual and acoustic features from parallel datasets.
 > Thus, it is insufficient in capturing emotional prosody nuances, hindering effective linkage between the TPP and APM modules.
 > To overcome this limitation, we propose an additional prosody alignment loss function based on Kullback-Leibler divergence, to facilitate joint training for frame-level prosody modeling across the TPP and APM modules, with the goal of enhancing prosody information integration and synchronization within our model.
 
@@ -203,7 +203,7 @@ $$
 > - CycleGAN [25] (baseline): CycleGAN-based EVC model with WORLD vocoder.
 > - StarGAN [26] (baseline): StarGAN-based EVC model with WORLD vocoder.
 > - Seq2seq-WA2 [15] (baseline): Seq2seq-based EVC model employing 2-stage training strategy with WaveRNN vocoder.
-> - [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) (baseline):EVC model constructed by original VITS, operating independently in both fixed-length and variable-length, take the average as the result.
+> - [VITS (2021)](../../Models/E2E/2021.06_VITS.md) (baseline):EVC model constructed by original VITS, operating independently in both fixed-length and variable-length, take the average as the result.
 > - **PAVITS-FL** (proposed): the proposed model based on VITS, incorporates all the contributions outlined in the paper, but operate within a fixed-length framework.
 > - **PAVITS-VL** (proposed): the proposed model based on VITS, incorporates all the contributions outlined in the paper, but operate within a variable-length framework leveraging ASR to obtain text from source audio.
 
