--- a/Models/LLM/2024.04_LLaMA-VITS.md
+++ b/Models/LLM/2024.04_LLaMA-VITS.md
@@ -33,8 +33,8 @@ Demo:
 > Notably, in *Text-To-Speech (TTS)* systems, the integration of **BERT** for semantic token generation has underscored the importance of semantic content in producing coherent speech outputs.
 > Despite this, the specific utility of *LLMs* in enhancing TTS synthesis remains considerably limited.
 > This research introduces an innovative approach, ==**LLaMA-VITS**==, which enhances TTS synthesis by enriching the semantic content of text using LLM.
-> ==**LLaMA-VITS**== integrates semantic embeddings from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) with the [VITS model](../2021.06_VITS/2021.06_VITS.md), a leading end-to-end TTS framework.
-> By leveraging [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) for the primary speech synthesis process, our experiments demonstrate that ==**LLaMA-VITS**== matches the naturalness of the [original VITS](../2021.06_VITS/2021.06_VITS.md) (**ORI-VITS**) and those incorporate **BERT** (**BERT-VITS**), on the *LJSpeech* dataset, a substantial collection of neutral, clear speech.
+> ==**LLaMA-VITS**== integrates semantic embeddings from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) with the [VI../E2E/2021.06_VITS.md06_VITS.md), a leading end-to-end TTS framework.
+> By leveraging [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) for the primary speech synthesis process, our experiments demonstrate that ==**LLaMA-VITS**== matches the naturalness of the [origi../E2E/2021.06_VITS.md06_VITS.md) (**ORI-VITS**) and those incorporate **BERT** (**BERT-VITS**), on the *LJSpeech* dataset, a substantial collection of neutral, clear speech.
 > Moreover, our method significantly enhances emotive expressiveness on the *EmoV_DB_bea_sem* dataset, a curated selection of emotionally consistent speech from the *EmoV_DB* dataset, highlighting its potential to generate emotive speech.
 
 ## 1.Introduction
@@ -47,7 +47,7 @@ Demo:
 > On the other hand, **Large-scale Language Models (LLMs)**, such as [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md), not only require decreasing computational re sources and achieve higher levels of text generation but also possess excellent zero-shot learning capabilities.
 > Moreover, they can achieve improvements comparable to fine-tuning by adjusting only a minimal number of parameters through prompt tuning (Liu et al., 2022; Tu et al., 2022).
 > However, the potential of these LLMs for TTS tasks has not been fully explored.
-> In light of this context, we introduce ==**LLaMA-VITS**==, a model that leverages semantic representations extracted from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) on top of a state-of-the-art TTS model, [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), enabling the generated speech to retain acoustic information while understanding and expressing semantics and emotions.
+> In light of this context, we introduce ==**LLaMA-VITS**==, a model that leverages semantic representations extracted from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) on top of a state-of-the-art TTS model, [VIT../E2E/2021.06_VITS.md06_VITS.md), enabling the generated speech to retain acoustic information while understanding and expressing semantics and emotions.
 > Through comprehensive objective and subjective evaluations, ==**LLaMA-VITS**== has been verified to surpass TTS baselines without semantic input or those integrated with BERT.
 > The main contributions encapsulate: 
 > - We propose **LLaMA-VITS model** that utilizes the semantic understanding and expression capabilities of [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md), offering equal or superior acoustic performance compared to baseline models, along with a significantly enhanced ability to understand and express semantics and emotions.
@@ -75,21 +75,21 @@ Demo:
 > **End-to-end models** are capable of trans forming raw text directly into final speech output, which not only streamlines the structural complexity of TTS systems and facilitates easier deployment but also significantly reduces the dependency on manual feature engineering, simplifying the training process.
 > Moreover, they notably enhance the naturalness and intelligibility of the speech, thereby be coming the predominant architecture in **TTS models**.
 > For instance, [Char2Wav (2017)]() introduces an attentive encoder-decoder frame work for direct speech synthesis from text input.
-> [Tacotron (2017)](../2017.03_Tacotron/2017.03_Tacotron.md) undertakes training from the ground up and directly predicts linear spectrograms.
-> Furthermore, the speech produced by [Tacotron2 (2017)](../2017.03_Tacotron/2017.12_Tacotron2.md) closely mirrors the natural human voice.
+> [Tacotron (2017)](../2017.03.29_Tacotron/2017.03_Tacotron.md) undertakes training from the ground up and directly predicts linear spectrograms.
+> Furthermore, the speech produced by [Tacotron2 (2017)](../AV1_Acoustic/2017.12_Tacotron2.md) closely mirrors the natural human voice.
 
 > In the realm of **end-to-end TTS models**, many have adopted a non-autoregressive architecture.
 > This architecture enables parallel data processing, where the model’s output generation does not depend on the output of the previous time step, thereby enhancing processing speed.
 > It also circumvents the error accumulation issue inherent in **traditional autoregressive models**, which significantly boosts TTS performance.
-> [FastSpeech (2019)](../2019.05_FastSpeech/2019.05_FastSpeech.md) and its variants exemplify this trend.
-> [FastSpeech (2019)](../2019.05_FastSpeech/2019.05_FastSpeech.md) employs a transformer-based architecture to generate mel-spectrograms in parallel.
-> Building on [FastSpeech (2019)](../2019.05_FastSpeech/2019.05_FastSpeech.md), [FastPitch (2020)](../2020.06_FastPitch/2020.06_FastPitch.md) predicts pitch contours during inference, enabling the production of more expressive and high quality speech.
-> [FastSpeech2 (2020)](../2019.05_FastSpeech/2020.06_FastSpeech2.md) further incorporates explicit duration prediction and introduces pitch and energy as conditional inputs.
+> [FastSpeech (2019)](../AV1_Acoustic/2019.05_FastSpeech.md) and its variants exemplify this trend.
+> [FastSpeech (2019)](../AV1_Acoustic/2019.05_FastSpeech.md) employs a transformer-based architecture to generate mel-spectrograms in parallel.
+> Building on [FastSpeech (2019)](../AV1_Acoustic/2019.05_FastSpeech.md), [FastPitch (2020)](../2020.06_FastPitch/2020.06_FastPitch.md) predicts pitch contours during inference, enabling the production of more expressive and high quality speech.
+> [FastSpeech2 (2020)](../AV1_Acoustic/2020.06_FastSpeech2.md) further incorporates explicit duration prediction and introduces pitch and energy as conditional inputs.
 
 > Previous non-autoregressive approaches typically involve distinct training phases for **acoustic models** and **vocoders**.
-> [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) introduces a more natural-sounding output compared to these two-stage systems through its one-stage parallel end-to-end architecture.
-> Innovatively, [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) incorporates variational inference combined with normalizing flows and employs an adversarial training methodology.
-> Due to [VITS (2021)](../2021.06_VITS/2021.06_VITS.md)’s exemplary performance across multiple benchmarks, we select it as the **foundational TTS model** for our system.
+> [VITS (2021)](../E2E/2021.06_VITS.md) introduces a more natural-sounding output compared to these two-stage systems through its one-stage parallel end-to-end architecture.
+> Innovatively, [VITS (2021)](../E2E/2021.06_VITS.md) incorporates variational inference combined with normalizing flows and employs an adversarial training methodology.
+> Due to [VITS (2021)](../E2E/2021.06_VITS.md)’s exemplary performance across multiple benchmarks, we select it as the **foundational TTS model** for our system.
 
 ### 2.2. Fine-tuning BERT-like LMs for TTS 
 
@@ -137,8 +137,8 @@ Demo:
 ![](2024.04_LLaMA-VITS_FIG01.png)
 
 > We propose leveraging semantic embeddings de rived from a **GPT-like LM** to improve TTS synthesis.
-> In our work, [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) is employed as the **GPT-like model**, as elaborated in Sec.2.3, and [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) is utilized as the **TTS model** for generating audio from phoneme embeddings, as detailed in Sec.2.1.
-> In essence, we extract semantic embeddings $E_{s}$ from the final hidden layer of [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) and integrate them with the original acoustic text embeddings $E_{a}$ of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), forming enhanced text embeddings $E_{as}$ for speech synthesis.
+> In our work, [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) is employed as the **GPT-like model**, as elaborated in Sec.2.3, and [VIT../E2E/2021.06_VITS.md06_VITS.md) is utilized as the **TTS model** for generating audio from phoneme embeddings, as detailed in Sec.2.1.
+> In essence, we extract semantic embeddings $E_{s}$ from the final hidden layer of [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) and integrate them with the original acoustic text embeddings $E_{a}$ of [VIT../E2E/2021.06_VITS.md06_VITS.md), forming enhanced text embeddings $E_{as}$ for speech synthesis.
 > Specifically, either a global token or a sequence of tokens is used to encapsulate the semantic attributes of an input sentence for varying objectives.
 > The distinctions between these two token types are further explicated in Sec.3.1.
 
@@ -228,8 +228,8 @@ $$
 
 ### 3.2.Fusing Semantic Embeddings with Acoustic Embeddings
 
-> To align the dimensions of semantic embedding extracted from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md), denoted as $E_{s}$, with the acoustic embeddings from [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), denoted as $E_{a}$, we employ a linear projection.
-> The original dimension of $E_{s}$, $d_{LLaMA}$, is projected to match the dimension of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) acoustic embedding, $d_{VITS}$, using a linear transformation matrix $W$ of dimensions $d_{VITS}\times d_{LLaMA}$.
+> To align the dimensions of semantic embedding extracted from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md), denoted as $E_{s}$, with the acoustic embeddings from [VIT../E2E/2021.06_VITS.md06_VITS.md), denoted as $E_{a}$, we employ a linear projection.
+> The original dimension of $E_{s}$, $d_{LLaMA}$, is projected to match the dimension of [VITS (2021)](../E2E/2021.06_VITS.md) acoustic embedding, $d_{VITS}$, using a linear transformation matrix $W$ of dimensions $d_{VITS}\times d_{LLaMA}$.
 > The projected semantic embedding, $E_s'$, is calculated as follows: 
 
 $$
@@ -238,7 +238,7 @@ $$
 
 #### Fusing Global Embedding with Acoustic Embedding
 
-> To obtain an embedding $E_{as}$ that integrates both semantic and acoustic information, for global tokens, we simply add the dimensionally unified global embedding to [VITS (2021)](../2021.06_VITS/2021.06_VITS.md)’s acoustic em bedding, as shown in the equation: 
+> To obtain an embedding $E_{as}$ that integrates both semantic and acoustic information, for global tokens, we simply add the dimensionally unified global embedding to [VITS (2021)](../E2E/2021.06_VITS.md)’s acoustic em bedding, as shown in the equation: 
 
 $$
     E_{as} = E_{a} + E_s′\tag{10}
@@ -246,14 +246,14 @@ $$
 
 #### Fusing Sequential Embeddings to Enhance Text Embeddings
 
-> We utilize the Scaled Dot Product Attention mechanism to merge sequential embeddings with [VITS (2021)](../2021.06_VITS/2021.06_VITS.md)’s original acoustic embedding to gain enhanced embedding $E_{as}$ , which can be described by the following mathematical formulas: 
+> We utilize the Scaled Dot Product Attention mechanism to merge sequential embeddings with [VITS (2021)](../E2E/2021.06_VITS.md)’s original acoustic embedding to gain enhanced embedding $E_{as}$ , which can be described by the following mathematical formulas: 
 > First, calculate the attention scores $A$:
 
 $$
     A = \dfrac{q\cdot k^{\mathsf{T}}}{\gamma} \tag{11}
 $$
 
-> where $q$ is the acoustic embedding $E_{a}$ in [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) with dimensions $[b, t, d]$; 
+> where $q$ is the acoustic embedding $E_{a}$ in [VITS (2021)](../E2E/2021.06_VITS.md) with dimensions $[b, t, d]$; 
 > $k$ and $v$ denotes the semantic embedding $E_s'$ from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md), also with dimensions $[b, t, d]$; 
 > $b$ is the batch size,tis the sequence length, and $d$ is the embedding dimension;
 > $\gamma$ is temperature for scaling.
@@ -280,9 +280,9 @@ $$
 
 ### 4.1.Experimental Settings
 
-> We propose ==**LLaMA-VITS**== which uses semantic to kens derived from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) to enhance acoustic embedding in [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) for better TTS performance.
+> We propose ==**LLaMA-VITS**== which uses semantic to kens derived from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) to enhance acoustic embedding in [VIT../E2E/2021.06_VITS.md06_VITS.md) for better TTS performance.
 > To show the effectiveness of our method, we experimented with two baseline models.
-> In the **ORI-VITS** baseline, we use the original [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) without external semantic information.
+> In the **ORI-VITS** baseline, we use the original [VITS (2021)](../E2E/2021.06_VITS.md) without external semantic information.
 > In the **BERT-VITS** baseline, we extract various semantic tokens according to for mer research introduced in Section § 2.2.
 > Specifically, we use the `[CLS]` token of **BERT** as the global token.
 > To form the baseline of the sequential token in **BERT**, we use all the tokens in the sentence trained by text or phoneme, named `[BERT_TEX]` and `[BERT_PHO]`, respectively.
@@ -322,8 +322,8 @@ $$
 
 #### Implementation, Hyper-parameters, Training 
 
-> Our ==**LLaMA-VITS**== system was built on the [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) framework using its original implementation, augmented with semantic embeddings de rived from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) (Touvron et al., 2023) using its original implementation7.
-> For training LJSpeech, we use the public configs in the original implementation of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md).
+> Our ==**LLaMA-VITS**== system was built on the [VITS (2021)](../E2E/2021.06_VITS.md) framework using its original implementation, augmented with semantic embeddings de rived from [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) (Touvron et al., 2023) using its original implementation7.
+> For training LJSpeech, we use the public configs in the original implementation of [VITS (2021)](../E2E/2021.06_VITS.md).
 > For EmoV_DB_bea_sem, we use the same config as LJSpeech but changed batch size from 64 to 16 since this dataset is much smaller.
 > Besides implementing our proposed ==**LLaMA-VITS**==, we extracted corresponding semantic tokens `[CLS]`, `[BERT_TEX]` from **BERT-uncased-base model** and `[BERT_PHO]` from **BERT** pre-trained on phoneme for comparison.
 > In comparing the experimental results, we choose 100k-step results on both full LJSpeech and 1-hour LJSpeech datasets since they are rather large.
