--- a/Models/E2E/2021.06_VITS.md
+++ b/Models/E2E/2021.06_VITS.md
@@ -195,7 +195,7 @@ Rezende, Chen, Ziegler 通过使用标准化流增强先验和后验分布表现
 > Fig.01a and Fig.01b show the training and inference procedures of our method, respectively.
 > From now on, we will refer to our method as **Variational Inference with adversarial learning for end-to-end Text-to-Speech (VITS)**.
 
-![](2021.06_VITS_FIG01.png)
+![](../_Images/2021.06_VITS_FIG01.png)
 
 本节将解释我们提出的方法及其架构.
 在前三个小节中, 我们将介绍所提出的方法的主要内容: 条件变分自编码器形式; 由变分推断得到的对齐估计; 对抗训练以提高合成质量.
@@ -753,7 +753,7 @@ class Generator(torch.nn.Module):
 > Each convolutional layer in DDSConv blocks is followed by a layer normalization layer and GELU activation function. 
 > We choose to use dilated and depth-wise separable convolutional layers for improving parameter efficiency while maintaining large receptive field size.
 
-![](2021.06_VITS_FIG05.png)
+![](../_Images/2021.06_VITS_FIG05.png)
 
 图 05a 和图 05b 分别展示了随机时长预测器的训练和推理过程.
 随机时长预测器的主要构建块是具有膨胀和深度可分离卷积的残差块 (DDSConv), 如图 05c 所示.
@@ -772,7 +772,7 @@ DDSConv 中的每个卷积层后跟随一个层归一化层和 GELU 激活函数
 > We set the hidden dimension of all coupling layers and condition encoders to 192. 
 > Fig.06a and Fig.6b show the architecture of a condition encoder and a coupling layer used in the stochastic duration predictor.
 
-![](2021.06_VITS_FIG06.png)
+![](../_Images/2021.06_VITS_FIG06.png)
 
 所有的输入条件通过条件编码器处理, 每一个由两个 1x1 卷积层和 DDSConv 残差块组成.
 后验编码器和标准化流模块都有四个耦合层的神经样条流. 每个耦合层首先通过 DDSConv 块处理输入和输入条件, 并产生 29 通道的参数, 用于构造 10 个分段二次函数.
