--- a/Models/LLM/2024.04_LLaMA-VITS.md
+++ b/Models/LLM/2024.04_LLaMA-VITS.md
@@ -134,7 +134,7 @@ Demo:
 
 ## 3.Methodology
 
-![](2024.04_LLaMA-VITS_FIG01.png)
+![](../_Images/2024.04_LLaMA-VITS_FIG01.png)
 
 > We propose leveraging semantic embeddings de rived from a **GPT-like LM** to improve TTS synthesis.
 > In our work, [LLaMA2 (2023)](../LLM/2023.02_LLaMA/2023.07_LLaMA2.md) is employed as the **GPT-like model**, as elaborated in Sec.2.3, and [VIT../E2E/2021.06_VITS.md06_VITS.md) is utilized as the **TTS model** for generating audio from phoneme embeddings, as detailed in Sec.2.1.
@@ -299,7 +299,7 @@ $$
 > `[EIS_Word]` and `[EIS_Sentence]` use the average of tokens for an answer, which is formed in three words or a sentence by prompts shown in Fig.02, to describe the Emotion, Intention, and speaking Style of the transcript.
 > In **BERT-VITS** baseline, global strategy `[CLS]` only uses the first token from the **BERT-base-uncased model** for each input sentence.
 
-![](2024.04_LLaMA-VITS_FIG02.png)
+![](../_Images/2024.04_LLaMA-VITS_FIG02.png)
 
 #### Sequential Token Extraction
 
