--- a/Models/_tmp/2024.06.03_ControlSpeech.md
+++ b/Models/_tmp/2024.06.03_ControlSpeech.md
@@ -621,7 +621,7 @@ $$
 <br>
 
 在训练过程中, 时长预测器通过均方误差损失进行优化, 其中提取的时长作为训练目标. 
-我们采用蒙特利尔强制对齐（MFA）工具 [39] 来提取音素时长, 并将时长预测器的损失表示为$Loss_{dur}$. 
+我们采用蒙特利尔强制对齐 (MFA) 工具 [39] 来提取音素时长, 并将时长预测器的损失表示为$Loss_{dur}$. 
 编解码器生成模块则使用交叉熵损失函数进行优化. 
 我们随机选择一个通道进行优化, 并将此损失表示为 $Loss_{codec}$. 
 在 ***SMSD*** 模块中, 目标风格是通过将风格编解码器 $Y_{s}$ 传递给表示 $Y_{s}$ 风格提取器获得的全球风格表示. 
@@ -680,6 +680,39 @@ $$
 
 </details>
 <br>
+
+在本节中, 我们将介绍 ***VccmDataset***, 相关的基线模型以及 ***ControlToolkit*** 中的评估指标. 
+训练和推理的详细实验设置以及模型架构的具体细节, 分别在附录C和附录D中提供. 
+
+***VccmDataset*** 据我们所知, 目前没有包含文本风格提示和说话者提示的大型数据集. 
+我们基于现有的 [TextrolSpeech数据集](../../Datasets/2023.08.28_TextrolSpeech.md) 开发了 ***VccmDataset***. 
+[TextrolSpeech](../../Datasets/2023.08.28_TextrolSpeech.md) 是目前文本风格控制领域唯一的开源数据集, 包含总共330小时的语音数据以及236203条风格描述文本. 
+基于 [TextrolSpeech](../../Datasets/2023.08.28_TextrolSpeech.md), 我们优化了音高分布, 标签边界以及训练和数据集分割. 
+具体来说, 我们使用 LibriTTS 和来自 [TextrolSpeech](../../Datasets/2023.08.28_TextrolSpeech.md) 的情感数据作为基础数据库, 为每个语音样本标注了五个属性标签：性别, 音量, 速度, 音高和情感. 
+考虑到相邻类别之间数据值的紧密接近, 我们排除了每个属性每个区间边界上的5%的数据. 
+这确保了每个标签的更大独特性. 
+特别是, 由于男性和女性声音之间的音高分布存在显著差异, 我们使用性别依赖的阈值将音高分为三个不同的级别. 
+我们随机选择了1,500个音频样本作为 ***ControlSpeech*** 测试集, 并根据说话者ID匹配相应的提示声音. 
+此外, 为了评估 ***ControlSpeech*** 在域外声音和风格上的表现, 我们进一步筛选了一个适当的测试集, 并请语言专家编写了与[TextrolSpeech](../../Datasets/2023.08.28_TextrolSpeech.md) 中不同的风格描述. 
+关于 ***VccmDataset*** 创建的更多细节可以在附录 E 中找到. 
+
+
+基线模型 我们重现了几个最先进的风格可控模型, 包括 [PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [PromptStyle](../../Models/E2E/2023.05.31_PromptStyle.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)和[InstructTTS](../../Models/_tmp/2023.01.31_InstructTTS.md), 作为评估***ControlSpeech***可控性的主要比较模型. 
+为了比较声音克隆的有效性, 我们重现了[VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)模型和[MobileSpeech](../../Models/_tmp/2024.02.14_MobileSpeech.md)模型, 分别代表了自回归范式和平行生成范式. 
+相关的基线重现代码已集成到***ControlToolkit***中. 
+
+
+评估指标 我们的客观实验与 ([PromptTTS](../../Models/_tmp/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../../Models/_tmp/2023.09.05_PromptTTS2.md)) 保持一致. 
+为了评估模型的风格可控性, 我们使用准确度作为评估指标, 该指标衡量输出语音中的风格因素与提示中的风格因素之间的对应关系. 
+音高, 说话速度和音量的准确度使用信号处理工具计算, 而情感分类准确度则使用在***VccmDataset***情感数据上微调的情感分类模型计算. 
+我们使用[Emotion2Vec](../../Models/Speech_Representaion/2023.12.23_Emotion2Vec.md)模型的官方版本来进行语音情感识别任务, 该模型在***VccmDataset***的情感数据集上进行了微调. 
+为了评估原始提示与合成语音之间的音色相似度(Spk-sv), 我们使用了[WavLM](../../Models/_tmp/WavLM.md)的base-plus-sv版本. 
+此外, 我们使用Whisper3 [41]模型对生成的音频进行自动语音识别(ASR), 并计算与原始转录相比的字错误率(Wer). 
+对于主观测试, 我们在测试集上进行平均意见分数(MOS)评估, 通过众包来衡量音频的自然度. 
+我们从每个数据集的测试集中随机选择30个样本进行主观评估, 每个音频样本至少由10名测试者听取. 
+我们分析MOS在两个方面：MOS-Q (质量, 评估时长和音高的清晰度和自然度) 和MOS-S (说话者相似性) . 
+此外, 为了评估风格可控的多对多场景, 我们设计了特定的指标：MOS-TS (音色相似度) , MOS-SD (风格多样性) 和MOS-SA (风格准确度) . 
+我们将在多对多实验部分详细解释这些指标及其用例. 
 
 ### 4.2.Evaluation on style controllability
 
@@ -749,12 +782,27 @@ accuracy, ***ControlSpeech*** achieved state-of-the-art results in energy, speed
 
 ## 5.Conclusion
 
+<details>
+<summary>原文</summary>
+
 > In this paper, we present ***ControlSpeech***, the first TTS system capable of simultaneously performing zero-shot timbre cloning and zero-shot style control.
 > Leveraging large-scale pre-trained discrete codec representations, we disentangle style, content, and timbre, and generate the corresponding codec representations through a non-autoregressive, mask-based iterative codec generator.
 > Additionally, we identified a many-to-many problem in style control and designed a unique ***Style Mixed Semantic Density (SMSD)*** module to mitigate this issue.
 > We constructed a new dataset called ***VccmDataset***, and established relevant evaluation metrics and baselines for the new task, all of which are open-sourced in the ***ControlToolkit***.
 > The limitations of ***ControlSpeech*** and directions for future work are discussed in the appendix H.
 
+</details>
+<br>
+
+在本文中, 我们介绍了 ***ControlSpeech***, 这是首个能够同时进行零样本音色克隆和零样本风格控制的文本到语音 (TTS) 系统.
+我们利用大规模预训练的离散编解码器表示, 将风格、内容和音色解耦, 并通过非自回归、基于掩码的迭代编解码器生成器生成相应的编解码器表示.
+此外, 我们识别了风格控制中的多对多问题, 并设计了一个独特的 ***风格混合语义密度 (SMSD)*** 模块来缓解这一问题.
+我们构建了一个名为 ***VccmDataset*** 的新数据集, 并为新任务建立了相关的评估指标和基线, 所有这些都在 ***ControlToolkit*** 中开源.
+***ControlSpeech*** 的局限性和未来工作方向在附录 H 中进行了讨论.
+
+
+<details>
+<summary>TODO</summary>
 
 B ***SMSD*** Loss
 The loss function for the ***SMSD*** module represents the conditional probability of the input style ′ representation Xs .
@@ -807,3 +855,5 @@ In this work, we introduced ***ControlSpeech***, the first TTS system capable of
 > There is still a gap between these descriptions and the diversity of human-level style descriptions.
 > - Exploration of Generative Models We experimented with decoupled codecs and non-autoregressive parallel generative models.
 > Future research could explore a broader range of generative model architectures and additional audio representations.
+
+</details>
