--- a/Books/2023.05_Neural_TTS_Synthesis/Ch07.Fully_End-to-End_TTS.md
+++ b/Books/2023.05_Neural_TTS_Synthesis/Ch07.Fully_End-to-End_TTS.md
@@ -45,8 +45,8 @@
 
 ### 7.2.4.Stage 3: Character/Phoneme→Spectrogram→Waveform
 
-> [Tacotron (2017)](../../Papers/AcousticModels/2017.03_Tacotron.md) is further proposed to simplify linguistic and acoustic features, which directly predicts linear-spectrograms from characters/phonemes with an encoder-attention-decoder model, and converts linear-spectrograms into waveform with Griffin-Lim [28].
-> The following works such as DeepVoice 3 [13], [Tacotron 2 (2017)](../../Papers/AcousticModels/2017.12_Tacotron2.md), [TransformerTTS (2018)](../../Papers/AcousticModels/2018.09_Transformer_TTS.md), and [FastSpeech (2019)](../../Papers/AcousticModels/2019.05_FastSpeech.md), [FastSpeech2 (2020)](../../Papers/AcousticModels/2020.06_FastSpeech2.md) predict mel-spectrograms from characters/phonemes and further use a neural vocoder such as [WaveNet (2016)](../../Papers/Vocoders/2016.09_WaveNet.md), [WaveRNN (2018)](../../Papers/Vocoders/2018.02_WaveRNN.md), [WaveGlow (2018)](../../Papers/Vocoders/2018.10_WaveGlow.md), [FloWaveNet (2018)](../../Papers/Vocoders/2018.11_FloWaveNet.md), and [Parallel WaveGAN](../../Papers/Vocoders/2019.10_Parallel_WaveGAN.md) to generate the waveform..
+> [Tacotron (2017)](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md) is further proposed to simplify linguistic and acoustic features, which directly predicts linear-spectrograms from characters/phonemes with an encoder-attention-decoder model, and converts linear-spectrograms into waveform with Griffin-Lim [28].
+> The following works such as DeepVoice 3 [13], [Tacotron 2 (2017)](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), [TransformerTTS (2018)](../../Models/TTS2_Acoustic/2018.09.19_Transformer_TTS.md), and [FastSpeech (2019)](../../Models/TTS2_Acoustic/2019.05.22_FastSpeech.md), [FastSpeech2 (2020)](../../Models/TTS2_Acoustic/2020.06.08_FastSpeech2.md) predict mel-spectrograms from characters/phonemes and further use a neural vocoder such as [WaveNet (2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md), [WaveRNN (2018)](../../Models/TTS3_Vocoder/2018.02.23_WaveRNN.md), [WaveGlow (2018)](../../Models/TTS3_Vocoder/2018.10.31_WaveGlow.md), [FloWaveNet (2018)](../../Models/TTS3_Vocoder/2018.11.06_FloWaveNet.md), and [Parallel WaveGAN](../../Models/TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md) to generate the waveform..
 
 ### 7.2.5.Stage 4: Character/Phoneme→Waveform
 
@@ -88,7 +88,7 @@
 > A concurrent work called EATS [21] also directly generates waveform from characters/phonemes, which leverages duration interpolation and soft dynamic time wrapping loss for end-to-end alignment learning.
 > Wave-Tacotron [31] builds a flow-based decoder on Tacotron to directly generate a waveform, which uses parallel waveform generation in the flow part but still an autoregressive generation in the Tacotron part.
 > WaveGrad 2 [33] leverages a diffusion model to iteratively denoise the waveform conditioned on a phoneme encoder.
-> [VITS (2021)](../../Papers/End-to-End/2021.06_VITS.md) leverages a VAE to reconstruct the waveform sequence and uses a GAN-based loss to help optimize the waveform generation.
+> [VITS (2021)](../../Models/E2E/2021.06.11_VITS.md) leverages a VAE to reconstruct the waveform sequence and uses a GAN-based loss to help optimize the waveform generation.
 > It also uses leverage a Glow-TTS [35] based module to predict the prior distribution from the phoneme sequence to fulfill phoneme to waveform generation..
 
 ### 7.3.3.Human-Level Quality
