--- a/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
+++ b/Models/Speech_Neural_Codec/2021.07.07_SoundStream.md
@@ -13,7 +13,7 @@
   - [Jan Skoglund](../../Authors/Jan_Skoglund.md)
   - [Marco Tagliasacchi](../../Authors/Marco_Tagliasacchi.md)
 - 机构:
-  - [Google Research](../../Institutions/Google_Research.md) 
+  - [Google Research](../../Institutions/Google.md) 
 - 时间:
   - 2021.07.07 ArXiv v1
   - 2021.11.23 [IEEE TASLP](../../Publications/TASLP.md)
