--- a/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
+++ b/Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md
@@ -63,14 +63,14 @@
 
 > Recently, with the development of neural networks, speech synthesis technology has made a rapid progress.
 > Most neural speech synthesis models use a two-stage pipeline: 
-> 1. predicting a low resolution intermediate representation such as mel-spectrograms (Shen et al., 2018, Ping et al., 2017, Li et al., 2019) or linguistic features ([Oord et al.(WaveNet·2016)](../2016.09.12_WaveNet/2016.09_WaveNet.md)) from text, 
-> 2. synthesizing raw waveform audio from the intermediate representation ([Oord et al.(WaveNet·2016)](../2016.09.12_WaveNet/2016.09_WaveNet.md), Prenger et al., 2019, Kumar et al., 2019).
+> 1. predicting a low resolution intermediate representation such as mel-spectrograms (Shen et al., 2018, Ping et al., 2017, Li et al., 2019) or linguistic features ([Oord et al.(WaveNet·2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md)) from text, 
+> 2. synthesizing raw waveform audio from the intermediate representation ([Oord et al.(WaveNet·2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md), Prenger et al., 2019, Kumar et al., 2019).
 >
 > The first stage is to model low-level representations of human speech from text, whereas the second stage model synthesizes raw waveforms with up to 24,000 samples per second and up to 16 bit fidelity.
 > In this work, we focus on designing a second stage model that efficiently synthesizes high fidelity waveforms from mel-spectrograms.
 
 > Various work have been conducted to improve the audio synthesis quality and efficiency of second stage models.
-> [WaveNet (2016)](../2016.09.12_WaveNet/2016.09_WaveNet.md) is an autoregressive (AR) convolutional neural network that demonstrates the ability of neural network based methods to surpass conventional methods in quality..
+> [WaveNet (2016)](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md) is an autoregressive (AR) convolutional neural network that demonstrates the ability of neural network based methods to surpass conventional methods in quality..
 
 > However, because of the AR structure, WaveNet generates one sample at each forward operation; it is prohibitively slow in synthesizing high temporal resolution audio.
 > Flow-based generative models are proposed to address this problem.
@@ -662,7 +662,7 @@ $$
 > Additionally, we used 32-bit floating point operations for all the models without any optimization methods.
 
 > To confirm the trade-off between synthesis efficiency and sample quality, we conducted experiments based on the three variations of the generator, V1, V2, and V3 while maintaining the same discriminator configuration.
-> For V1, we set hu= 512,ku= [16, 16, 4, 4],kr= [3, 7, 11], and Dr= [[1, 1], [3, 1], [5, 1]] × 3].
+> For V1, we set hu= 512,ku= [16, 16, 4, 4],kr= [3, 7, 11], and `Dr= [[1, 1], [3, 1], [5, 1]] × 3]`.
 > V2 is simply a smaller version of V1, which has a smaller hidden dimension hu= 128but with exactly the same receptive fields.
 > To further reduce the number of layers while maintaining receptive fields wide, the kernel sizes and dilation rates of V3 were selected carefully.
 > The detailed configurations of the models are listed in Appendix A.1.
